implementando documentação da rota /user, cobrindo o patch e delete
